Fixed spacing for tab height.#2820

--- a/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
@@ -274,7 +274,7 @@ table p {
     width: 220px!important;
 }
 .ui-tabs .ui-tabs-nav li a {
-    height: 35px;
+    min-height: 35px!important;
 
 }
 .header-left.header-main.header-right .region-header-second .region-inner {
